# ncountr

./: .gitignore  PROMOTION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  draft-pdf.yml  publish.yml
docs/: api.rst  cli.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/vignettes/: index.rst
examples/: basic_config.yaml  cross_platform_config.yaml  demo.ipynb
examples/sample_rcc/: Sample_1_Lung.RCC  Sample_2_Lung.RCC  Sample_3_Lung.RCC
examples/vignettes/: GSE117751_autoimmune_retinopathy.ipynb  GSE140901_hcc_immunotherapy.ipynb  GSE268012_ifn_macrophages.ipynb  GSE275334_long_covid.ipynb  GSE74821_breast_cancer_pam50.ipynb
joss/: paper.bib  paper.md
src/ncountr/: __init__.py  __main__.py  cli.py  config.py  datasets.py  experiment.py  genesets.py
src/ncountr/core/: __init__.py  de.py  gsea.py  normalize.py  pathway.py  qc.py
src/ncountr/crossplatform/: __init__.py  composition.py  concordance.py  correlation.py  crossreactivity.py  loaders.py
src/ncountr/io/: __init__.py  export.py  geo.py  rcc.py
src/ncountr/plotting/: __init__.py  correlation_plots.py  de_plots.py  gsea_plots.py  heatmaps.py  pathway_plots.py  qc_plots.py  style.py
tests/: conftest.py  test_config.py  test_de.py  test_normalize.py  test_qc.py  test_rcc.py
